[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/gui/SystemOptions.gd" type="Script" id=1]

[node name="SystemOptions" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0, 0, 0, 0.662745 )

[node name="Control" type="Control" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 1580.0
margin_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopColorRect" type="ColorRect" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 1580.0
margin_bottom = 174.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
color = Color( 0.219608, 0.219608, 0.219608, 0.662745 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/TopColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyPropertiesButton" type="Button" parent="Control/MarginContainer/VBoxContainer/TopColorRect/HBoxContainer"]
margin_right = 783.0
margin_bottom = 164.0
size_flags_horizontal = 3
text = "Apply properties"

[node name="ResetPropertiesButton" type="Button" parent="Control/MarginContainer/VBoxContainer/TopColorRect/HBoxContainer"]
margin_left = 787.0
margin_right = 1570.0
margin_bottom = 164.0
size_flags_horizontal = 3
text = "Reset properties"

[node name="MiddleColorRect" type="ColorRect" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 1580.0
margin_bottom = 440.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
color = Color( 0.219608, 0.219608, 0.219608, 0.662745 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLabel" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer"]
margin_right = 783.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer/InputLabel"]
margin_right = 783.0
margin_bottom = 252.0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer/InputLabel/HBoxContainer"]
margin_top = 119.0
margin_right = 389.0
margin_bottom = 133.0
size_flags_horizontal = 3
text = "Face tracker FPS"

[node name="FaceTrackerFPS" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer/InputLabel/HBoxContainer"]
margin_left = 393.0
margin_right = 783.0
margin_bottom = 252.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
text = "12"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer"]
margin_left = 787.0
margin_right = 1570.0
margin_bottom = 252.0
size_flags_horizontal = 3

[node name="RunFaceTrackerButton" type="Button" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer/VBoxContainer"]
margin_right = 783.0
margin_bottom = 124.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Run face tracker"

[node name="SetOffsetsButton" type="Button" parent="Control/MarginContainer/VBoxContainer/MiddleColorRect/HBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 783.0
margin_bottom = 252.0
size_flags_vertical = 3
text = "Set offsets"

[node name="BottomColorRect" type="ColorRect" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 444.0
margin_right = 1580.0
margin_bottom = 880.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
color = Color( 0.219608, 0.219608, 0.219608, 0.662745 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/BottomColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleMessageContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/BottomColorRect/ScrollContainer"]
margin_right = 1570.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 11
__meta__ = {
"_edit_use_anchors_": false
}
